# AlfaHack

./: .env.disk  .gitignore  ForLexa.md  README.md  builder.config.json  docker-compose.yaml  package-lock.json  package.json
back/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
back/app/api/: __init__.py  amount.py  auth.py  ping.py
back/app/core/: config.py  db.py  error_handlers.py  exeptions.py  logger.py  middleware.py  session.py
back/app/repo/: amount.py  user.py
back/app/schemas/: ai.py  amount.py  users.py
back/app/scripts/: seed_amounts.py  seed_users.py
back/app/services/: ai.py  amount.py  security.py  users.py
back/solution/: .dockerignore  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  run.sh
back/solution/src/: __init__.py  config.py  main.py  router.py  schemas.py  utils.py  views.py
back/solution/src/services/: competitor_analyzer.py  google_search.py  html_parser.py
back/solution/tests/: test_responce.py
front/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
front/src/: App.jsx  styles.css
front/src/api/: aiApi.js  amountApi.js  analyticsApi.js  authApi.js  httpClient.js  promotionApi.js
front/src/components/: AnalyticsChart.css  AnalyticsChart.jsx  BottomNav.css  BottomNav.jsx  CompetitorCard.css  CompetitorCard.jsx  DateRangeModal.css  DateRangeModal.jsx  NicheDescriptionModal.jsx  NicheHelpModal.css  NicheHelpModal.jsx  PeriodSelector.css  PeriodSelector.jsx  RecommendationCard.css  RecommendationCard.jsx  WarningCard.jsx
front/src/layouts/: MainLayout.jsx
(+17 files in other folders)
