[project]
name = "solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "ollama>=0.6.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    "lxml>=5.0.0",
]
